# zero2production

./: Cargo.toml  Dockerfile  README.md
migrations/: 20250901095355_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
