[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
config = { version = "0.11", default-features = false, features = ["yaml"] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = "1.0.219"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.18.1", features = ["v4"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.19"

[dev-dependencies]
once_cell = "1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
